--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
 }
 
 .app_content {
-  width: 1140px;
+  max-width: 1140px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  /* background-color: wheat; */
   margin: auto;
 }
