--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -29,15 +29,23 @@
       }
     }
 
-    > ul {
+    > .navs {
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 1.5rem;
 
-      > li {
-        list-style-type: none;
-      }
     }
-  }
+}
+}
+
+button {
+  background: transparent;
+  border: none;
+  padding: 4px;
+  cursor: pointer;
+}
+
+a {
+    text-decoration: none;
 }
