--- a/src/components/BG/Background.module.scss
+++ b/src/components/BG/Background.module.scss
@@ -1,7 +1,7 @@
 .container {
   background: #0e1014;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   border: 1px solid white;
   display: flex;
@@ -11,6 +11,10 @@
 .main {
   position: relative;
   width: 100%;
+}
+
+.main_mobi {
+  display: none;
 }
 
 .sm_blur_red_ball {
@@ -28,4 +32,29 @@
 .sm_purple_ball {
   margin-left: 55%;
   position: absolute;
+}
+
+@media screen and (max-width: 768px) and (min-width: 320px) {
+  .container {
+    .main {
+      display: none;
+    }
+
+    .main_mobi {
+      display: block;
+      position: relative;
+      width: 100%;
+    }
+    .purple_ball_mobi {
+      position: absolute;
+      right: 0;
+      top: 40%;
+    }
+    .red_ball_mobi {
+      position: absolute;
+      left: 20px; 
+      bottom: 0;
+      filter: blur(5px);
+    }
+  }
 }
