--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -25,7 +25,7 @@
 
       > p {
         font-size: 10px;
-        font-family: 'Montserrat', sans-serif;
+        font-family: "Montserrat", sans-serif;
       }
     }
 
@@ -34,9 +34,14 @@
       justify-content: center;
       align-items: center;
       gap: 1.5rem;
-
+      > button {
+        font-size: 16px;
+      }
     }
-}
+  }
+  a {
+    text-decoration: none;
+  }
 }
 
 button {
@@ -46,6 +51,29 @@ button {
   cursor: pointer;
 }
 
-a {
-    text-decoration: none;
+@media screen and (max-width: 768px) and (min-width: 320px) {
+  .container {
+    margin-top: 0;
+    gap: 0;
+
+    section .logo,
+    .phone_nets {
+      display: none;
+    }
+    .navs {
+      width: 100vw;
+      height: 60px;
+      justify-content: space-evenly !important;
+      gap: 0 !important;
+      background-color: black;
+
+      > button {
+        color: white;
+
+        &:last-child {
+          display: none;
+        }
+      }
+    }
+  }
 }
