--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,9 @@
   flex-direction: column;
   margin: auto;
 }
+
+/* @media screen and (max-width: 768px) and (min-width: 320px) {
+  .app_content {
+    display: none;
+  }
+} */
