finish mobile adaptive

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
   margin: auto;
 }
 
-/* @media screen and (max-width: 768px) and (min-width: 320px) {
+@media screen and (max-width: 768px) and (min-width: 320px) {
   .app_content {
-    display: none;
+    height: 99vh;
   }
-} */
+}
