--- a/src/components/BG/Background.module.scss
+++ b/src/components/BG/Background.module.scss
@@ -36,6 +36,8 @@
 
 @media screen and (max-width: 768px) and (min-width: 320px) {
   .container {
+    background: #1F1523;
+
     .main {
       display: none;
     }
