--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -5,7 +5,6 @@
   margin-top: 100px;
   background: #0e1014;
 
-
   > .left_content {
     display: flex;
     flex-direction: column;
@@ -22,7 +21,6 @@
         font-size: 48px;
         font-weight: bold;
         background-image: linear-gradient(60deg, #fcb045, #ff3f78);
-        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
@@ -48,7 +46,6 @@
 
       > span {
         font-weight: bold;
-        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-image: linear-gradient(90deg, #fcb045 36.99%, #fd1d1d 100%),
@@ -93,10 +90,54 @@
       }
     }
   }
+
+  .cards_container_mobi {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 768px) and (min-width: 320px) {
   .container {
-    display: none;
+    flex-direction: column;
+    max-width: 100vw;
+    padding: 0 20px;
+    margin-top: 50px;
+    background: #1F1523;
+
+    > .left_content {
+      > p {
+        &:first-child {
+          font-size: 36px;
+        }
+        &:nth-child(2) {
+          font-size: 36px;
+        }
+      }
+    }
+
+    > .right_content {
+      .cards_header {
+        text-align: start;
+        margin-top: 40px;
+      }
+    }
+    .cards_container_mobi {
+      display: grid;
+      gap: 1rem;
+      margin-top: 30px;
+      grid-template-columns: 1fr 1fr;
+
+      .card_mobi {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        text-transform: uppercase;
+      }
+    }
+
+    .cards_container,
+    .btn_div {
+      display: none !important;
+    }
   }
 }
