--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -13,8 +13,13 @@
     display: flex;
     gap: 5rem;
   }
-  .about,
+
   .menu {
+    display: flex;
+    gap: 3rem;
+  }
+  .about,
+  .menu > div {
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -43,6 +48,7 @@
 
   .footer_link {
     font-size: 16px;
+    text-align: start;
   }
 
   .rights {
@@ -50,11 +56,11 @@
     flex-direction: column;
     gap: 6px;
     margin-top: 60px;
-
-    > p,
-    a {
-      text-align: end;
-    }
+  }
+  p,
+  a {
+    text-align: end;
+    text-decoration: none;
   }
 }
 
@@ -67,6 +73,32 @@ button {
 
 @media screen and (max-width: 768px) and (min-width: 320px) {
   .container {
-    display: none;
+    .main {
+      max-width: 100%;
+      flex-direction: column;
+      padding: 40px 20px;
+      margin-top: 160px;
+
+      .about_and_menu {
+        flex-direction: column;
+        gap: 1rem;
+      }
+    }
+    .contacts {
+      align-items: flex-start;
+      margin-top: 30px;
+    }
+
+    .title {
+      height: 40px;
+    }
+
+    button > img {
+      width: 24px;
+    }
+
+    a {
+      text-align: start
+    }
   }
 }
