--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -11,7 +11,7 @@
     align-items: flex-start;
 
     &:nth-child(2) {
-      gap: 2rem;
+      gap: 1rem;
     }
 
     .logo {
@@ -41,6 +41,7 @@
   }
   a {
     text-decoration: none;
+    width: max-content;
   }
 }
 
@@ -66,6 +67,8 @@ button {
       justify-content: space-evenly !important;
       gap: 0 !important;
       background-color: black;
+      position: absolute;
+      top: 0;
 
       > button {
         color: white;
