--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -77,7 +77,7 @@ button {
       max-width: 100%;
       flex-direction: column;
       padding: 40px 20px;
-      margin-top: 160px;
+      margin-top: 0;
 
       .about_and_menu {
         flex-direction: column;
