--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -102,7 +102,7 @@
     max-width: 100vw;
     padding: 0 20px;
     margin-top: 50px;
-    background: #1F1523;
+    background: transparent !important;
 
     > .left_content {
       > p {
