fix bug of footer 4

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -67,8 +67,8 @@ button {
       justify-content: space-evenly !important;
       gap: 0 !important;
       background-color: black;
-      position: absolute;
-      top: 0;
+      // position: absolute;
+      // top: 0;
 
       > button {
         color: white;
