--- a/src/index.css
+++ b/src/index.css
@@ -18,5 +18,6 @@
 @media screen and (max-width: 768px) and (min-width: 320px) {
   .app_content {
     height: 97vh;
+    justify-content: flex-start;
   }
 }
